--- a/asm2/src/main/webapp/templates/user/css/style.css
+++ b/asm2/src/main/webapp/templates/user/css/style.css
@@ -46,7 +46,7 @@ nav{
 }
 
 .nav-left .logo-icon{
-    width: 130px;
+    width: 150px;
     margin-right: 25px;
 }
 
@@ -63,7 +63,7 @@ nav{
 }
 
 .nav-middle .search-box input{
-    width: 400px;
+    width: 300px;
     border: 0;
     outline: 0;
     background: transparent;
@@ -98,10 +98,6 @@ nav{
     margin-bottom: 20px;
     width: fit-content;
     flex-wrap: wrap;
-}
-
-.shortcut-links a:first-child{
-    color: #ed3833;
 }
 
 .slidebar hr{
@@ -180,6 +176,13 @@ nav{
     margin-top: 15px;    
 }
 
+.list-container1{
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-column-gap: 16px;
+    grid-row-gap: 30px;
+    margin-top: 15px;   
+}
+
 .vid-list .thumnail{
     width: 100%;
     border-radius: 5%;
@@ -209,7 +212,7 @@ nav{
     margin-bottom: 5px;
 }
 
-@media (max-width: 900px){
+@media (max-width: 700px){
     .menu-icon{
         display: none;
     }
@@ -233,17 +236,20 @@ nav{
     }
 
     .nav-middle .search-box input{
-        width: 200px;
+        width: 100px;
     }
-
+    
     .nav-middle .mic-icon{
         display: none;
     }
 
-    .logo-icon{
-        width: 90px;
+    .nav-left .logo-icon{
+    	width: 90px;
+    	display: block;
     }
 }
+
+
 
 .play-container{
     padding-left: 2%;
